--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@storybook/nextjs": "^7.0.2",
     "@storybook/react": "^7.0.2",
     "@storybook/testing-library": "^0.0.14-next.2",
+    "@types/uuid": "^9.0.1",
     "eslint-plugin-storybook": "^0.6.11",
     "npm-run-all": "^4.1.5",
     "storybook": "^7.0.2"
